add responsive layout

--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
     <h1>UNSPLASH API - INFINITE SCROLL</h1>
 
     <!-- Loader -->
-    <div class='loader' id='loader'>
+    <div class='loader' id='loader' hidden>
         <img src='loader.svg' alt='Loading'>
     </div>
+    
+     <!-- Image Container -->
+    <div class='img-container' id='img-container'></div>
 
     <!-- Script -->
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
